feat:删除不必要的函数。统一代码规范

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,14 @@
 
 S3method(createCountPhe,character)
 S3method(createCountPhe,default)
-export(DESeqObjPCA)
-export(DESeqRes)
-export(DESeqResVolcano)
-export(DEseqObj)
-export(GO)
-export(GSEAgo)
-export(GSEAkegg)
-export(KEGG)
+export(DESeq_PCA)
+export(DESeq_res)
+export(GSEA_kegg)
 export(createCountPhe)
+export(create_DEseq)
+export(define_de)
+export(plot_overallGSEA)
+export(volcano)
 import(ggplot2)
 import(pasilla)
 importFrom(DESeq2,DESeq)
@@ -20,25 +19,18 @@ importFrom(DESeq2,plotPCA)
 importFrom(DESeq2,results)
 importFrom(DESeq2,varianceStabilizingTransformation)
 importFrom(DESeq2,vst)
-importFrom(GEOmeta,GSEtoExpr)
+importFrom(GEOmeta,saveGSE)
 importFrom(clusterProfiler,bitr)
-importFrom(clusterProfiler,enrichGO)
-importFrom(clusterProfiler,enrichKEGG)
-importFrom(clusterProfiler,gseGO)
 importFrom(clusterProfiler,gseKEGG)
 importFrom(clusterProfiler,setReadable)
-importFrom(enrichplot,dotplot)
 importFrom(ggplot2,geom_text)
 importFrom(grDevices,dev.off)
-importFrom(grDevices,jpeg)
 importFrom(grDevices,pdf)
 importFrom(grDevices,png)
-importFrom(graphics,barplot)
 importFrom(org.Hs.eg.db,org.Hs.eg.db)
 importFrom(stats,as.formula)
 importFrom(stats,median)
 importFrom(stats,relevel)
-importFrom(stringr,str_split_fixed)
 importFrom(utils,modifyList)
 importFrom(utils,read.csv)
 importFrom(utils,read.table)
