feat: add convert-Seurat.R; use markdown in roxygen tag; set version 0.1.2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method(create_count_phe,default)
 export(DESeq_PCA)
 export(DESeq_res)
 export(GSEA_kegg)
+export(Seurat_Reference)
+export(Seurat_SpatialRNA)
 export(create_DEseq)
 export(create_count_phe)
 export(define_de)
@@ -18,6 +20,9 @@ importFrom(DESeq2,plotPCA)
 importFrom(DESeq2,results)
 importFrom(DESeq2,varianceStabilizingTransformation)
 importFrom(DESeq2,vst)
+importFrom(Seurat,GetAssayData)
+importFrom(SeuratObject,GetAssayData)
+importFrom(SeuratObject,GetTissueCoordinates)
 importFrom(clusterProfiler,bitr)
 importFrom(clusterProfiler,gseKEGG)
 importFrom(clusterProfiler,setReadable)
@@ -26,6 +31,8 @@ importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(grDevices,png)
 importFrom(org.Hs.eg.db,org.Hs.eg.db)
+importFrom(spacexr,Reference)
+importFrom(spacexr,SpatialRNA)
 importFrom(stats,as.formula)
 importFrom(stats,median)
 importFrom(stats,relevel)
