--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-#tmp files
-tmp/*
+#temp-data files
+temp-data/*
+
 # History files
 .Rhistory
 .Rapp.history
@@ -21,6 +22,7 @@ tmp/*
 
 # RStudio files
 .Rproj.user/
+.Rbuildignore
 
 # produced vignettes
 vignettes/*.html
