--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,18 +11,22 @@ Imports:
   DESeq2,
   ggplot2,
   pasilla,
-  stringr,
-  org.Hs.eg.db
+  org.Hs.eg.db,
+  Seurat,
+  SeuratObject,
+  spacexr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Suggests: 
     knitr,
     DOSE (>= 3.16.0),
     testthat (>= 2.0.0),
     rmarkdown,
-    org.Dm.eg.db
+    org.Dm.eg.db,
+    gtools
 Config/testthat/edition: 2
 VignetteBuilder: knitr
 NeedsCompilation: no
